k8s-yamls-master/k8s-yamls-master/live/lab/confluence/output.yaml
---
# Source: confluence/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: RELEASE-NAME-confluence
  labels:
    helm.sh/chart: confluence-1.5.1
    app.kubernetes.io/name: confluence
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "7.19.0"
    app.kubernetes.io/managed-by: Helm
    
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 5701
      targetPort: hazelcast
      protocol: TCP
      name: hazelcast
  selector:
    app.kubernetes.io/name: confluence
    app.kubernetes.io/instance: RELEASE-NAME
---
# Source: confluence/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: RELEASE-NAME-confluence
  labels:
    helm.sh/chart: confluence-1.5.1
    app.kubernetes.io/name: confluence
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "7.19.0"
    app.kubernetes.io/managed-by: Helm
    
spec:
  replicas: 1
  serviceName: RELEASE-NAME-confluence
  selector:
    matchLabels:
      app.kubernetes.io/name: confluence
      app.kubernetes.io/instance: RELEASE-NAME
  template:
    metadata:
      annotations:
        checksum/config-jvm: 17d76930560a082f72ff0a9de9d9ccefebb48312a225a847db31d1a194b0dfd4
        
      labels:
        app.kubernetes.io/name: confluence
        app.kubernetes.io/instance: RELEASE-NAME
        
    spec:
      serviceAccountName: RELEASE-NAME-confluence
      terminationGracePeriodSeconds: 25
      securityContext:
        
        
        fsGroup: 2002
      hostAliases:
        
      containers:
        - name: confluence
          image: "docker-local.artifactory.medimpact.com/itapps/confluence:latest:7.19.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8090
              protocol: TCP
            - name: hazelcast
              containerPort: 5701
              protocol: TCP
            
          readinessProbe:
            httpGet:
              port: 8090
              path: /status
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: "2"
              memory: 2G
          volumeMounts:
            
            - name: local-home
              mountPath: "/var/atlassian/application-data/confluence"
            - name: local-home
              mountPath: "/opt/atlassian/confluence/logs"
              subPath: "logs"
            - name: shared-home
              mountPath: "/var/atlassian/application-data/shared-home"
            
            
            
            
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "/shutdown-wait.sh"]
        
        
        
      volumes:
        
        
        
        - name: local-home
        
          emptyDir: {}
        - name: shared-home
        
          persistentVolumeClaim:
            claimName: sharedvol
---
# Source: confluence/templates/ingress-setup.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: RELEASE-NAME-confluence-setup
  labels:
    helm.sh/chart: confluence-1.5.1
    app.kubernetes.io/name: confluence
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "7.19.0"
    app.kubernetes.io/managed-by: Helm
    
  annotations:
    "kubernetes.io/ingress.class": nginx
    
    "nginx.ingress.kubernetes.io/affinity": "cookie"
    "nginx.ingress.kubernetes.io/affinity-mode": "persistent"
    "nginx.ingress.kubernetes.io/proxy-body-size": 250m
    "nginx.ingress.kubernetes.io/proxy-connect-timeout": "300"
    "nginx.ingress.kubernetes.io/proxy-read-timeout": "300"
    "nginx.ingress.kubernetes.io/proxy-send-timeout": "300"
spec:

  rules:
    - host: 
      http:
        paths:
          - path: /setup
            pathType: Prefix
            backend:
              service:
                name: RELEASE-NAME-confluence
                port:
                  number: 80
          - path: /bootstrap
            pathType: Prefix
            backend:
              service:
                name: RELEASE-NAME-confluence
                port:
                  number: 80
---
# Source: confluence/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: RELEASE-NAME-confluence
  labels:
    helm.sh/chart: confluence-1.5.1
    app.kubernetes.io/name: confluence
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "7.19.0"
    app.kubernetes.io/managed-by: Helm
    
  annotations:
    "kubernetes.io/ingress.class": nginx
    
    "nginx.ingress.kubernetes.io/affinity": "cookie"
    "nginx.ingress.kubernetes.io/affinity-mode": "persistent"
    "nginx.ingress.kubernetes.io/proxy-body-size": 250m
    "nginx.ingress.kubernetes.io/proxy-connect-timeout": "60"
    "nginx.ingress.kubernetes.io/proxy-read-timeout": "60"
    "nginx.ingress.kubernetes.io/proxy-send-timeout": "60"
spec:

  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: RELEASE-NAME-confluence
                port:
                  number: 80
---
# Source: confluence/templates/tests/test-application-status.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "RELEASE-NAME-confluence-application-status-test"
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": "before-hook-creation,hook-succeeded"
    
  labels:
    helm.sh/chart: confluence-1.5.1
    app.kubernetes.io/name: confluence
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "7.19.0"
    app.kubernetes.io/managed-by: Helm
    
spec:
  containers:
    - name: test
      image: alpine
      command:
        - /bin/sh
        - -ec
        - |
          apk add -q jq curl
          STATUS=$(curl -s "$STATUS_URL")
          echo "Verifying application state is RUNNING or FIRST_RUN: $STATUS"
          echo $STATUS | jq -e '.state|test("RUNNING|FIRST_RUN")'
  restartPolicy: Never
---
# Source: confluence/templates/tests/test-database-connectivity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "RELEASE-NAME-confluence-db-connectivity-test"
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": "before-hook-creation,hook-succeeded"
    
  labels:
    helm.sh/chart: confluence-1.5.1
    app.kubernetes.io/name: confluence
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "7.19.0"
    app.kubernetes.io/managed-by: Helm
    
spec:
  serviceAccountName: RELEASE-NAME-confluence
  volumes:
    
    - name: shared-home
    
      persistentVolumeClaim:
        claimName: sharedvol
    
  containers:
    - name: test
      image: "docker-local.artifactory.medimpact.com/itapps/confluence:latest:7.19.0"
      imagePullPolicy: IfNotPresent
      volumeMounts:
        
      command:
        - /bin/bash
        - -ec
        - |
          cat <<EOF | jshell - > output.txt
          var jdbcUrl = System.getenv("JDBC_URL");
          var jdbcUsername = System.getenv("JDBC_USER");
          var jdbcPassword = System.getenv("JDBC_PASSWORD");

          System.out.println("Establishing connection to " + jdbcUrl);
          try (var c = java.sql.DriverManager.getConnection(jdbcUrl, jdbcUsername, jdbcPassword)) {
             System.out.println("Connection established OK, " + c.getClass());
          }
          EOF
          cat output.txt
          grep -q "Connection established OK" output.txt
  restartPolicy: Never
---
# Source: confluence/templates/tests/test-shared-home-permissions.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "RELEASE-NAME-confluence-shared-home-permissions-test"
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": "before-hook-creation,hook-succeeded"
    
  labels:
    helm.sh/chart: confluence-1.5.1
    app.kubernetes.io/name: confluence
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "7.19.0"
    app.kubernetes.io/managed-by: Helm
    
spec:
  containers:
    - name: test
      image: debian:stable-slim
      imagePullPolicy: IfNotPresent
      securityContext:
        # We assume that the UID and GID used by the product images are the same, which in practice they are
        runAsUser: 2002
        runAsGroup: 2002
      volumeMounts:
        - name: shared-home
          mountPath: /shared-home
      command:
        - /bin/sh
        - -ec
        - |
          ls -ld /shared-home
          echo "Creating temporary file in shared home as user $(id -u):$(id -g)"
          touch /shared-home/permissions-test
          ls -l /shared-home/permissions-test
          rm /shared-home/permissions-test
  volumes:
    
    - name: shared-home
    
      persistentVolumeClaim:
        claimName: sharedvol
    
  restartPolicy: Never
