k8s-yamls-master/k8s-yamls-master/live/lab/confluence/1-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress.confluence.tcp8090
  namespace: itapps-dev
spec:
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            namespace: ingress-nginx 
        podSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
      ports:
      - port: 8090
        protocol: TCP
  podSelector:
    matchLabels:
      app: confluence
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: confluence.confluence-postgres.6379
  namespace: itapps-dev
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: confluence
    ports:
    - port: 5432
      protocol: TCP
  podSelector:
    matchLabels:
      app: confluence-postgres
  policyTypes:
  - Ingress
